badge overflow list style fix

--- a/assets/css/views/badges.scss
+++ b/assets/css/views/badges.scss
@@ -9,3 +9,7 @@
   display: inline-block;
   padding: 0 4px;
 }
+
+.badges > .badge > img {
+  max-width: unset;
+}
